k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codepandem
  namespace: codepandem
  labels:
    app: codepandem
spec:
  rules:
  - host: codepandem.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
